{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 19,
  "lineage": "a477676b-ae05-7d7a-3b95-d27a3781816d",
  "resources": [
    {
      "module": "module.database",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765827814541:vpc/vpc-04b979ade2810c650",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05039fdfde4346a33",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bd312f1ad80c4be8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "default"
                ]
              }
            ],
            "id": "vpc-04b979ade2810c650",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b9bb3f29b4d83aa",
            "owner_id": "765827814541",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765827814541:security-group/sg-06c2f648df63043f2",
            "description": "Allow traffic to Postgress RDS",
            "egress": [],
            "id": "sg-06c2f648df63043f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "be-dev-be-rds-postgress-sg",
            "name_prefix": "",
            "owner_id": "765827814541",
            "revoke_rules_on_delete": false,
            "tags": {
              "appid": "APP-696",
              "cloud_provider": "aws",
              "env": "dev",
              "lob": "be",
              "platform": "microservices",
              "project": "be"
            },
            "tags_all": {
              "appid": "APP-696",
              "cloud_provider": "aws",
              "env": "dev",
              "lob": "be",
              "platform": "microservices",
              "project": "be"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b979ade2810c650"
          },
          "dependencies": [
            "module.database.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_postgress_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765827814541:security-group-rule/sgr-04f1679be1188da14",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-04f1679be1188da14",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06c2f648df63043f2",
            "security_group_rule_id": "sgr-04f1679be1188da14",
            "tags": null,
            "tags_all": {
              "appid": "APP-696"
            },
            "to_port": 5432
          },
          "dependencies": [
            "module.database.aws_security_group.rds_postgres",
            "module.database.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}